--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,20 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/Img_Sorter.iml
+.idea/jarRepositories.xml
+.idea/libraries/Maven__com_adobe_xmp_xmpcore_6_1_11.xml
+.idea/libraries/Maven__com_drewnoakes_metadata_extractor_2_18_0.xml
+.idea/misc.xml
+target/classes/IMG_20221016_101316.jpg
+target/classes/IMG_20221029_121643.jpg
+target/classes/IMG_20221031_101643.jpg
+target/maven-archiver/pom.properties
+target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+.idea/Img_Sorter.iml
+.idea/misc.xml
+.idea/Img_Sorter.iml
+.idea/misc.xml
